--- a/css/feature.css
+++ b/css/feature.css
@@ -23,8 +23,10 @@ body:before {
   bottom: 0;
   background: rgba(20, 20, 20, 0.5);
 }*/
-		  *{
-  margin: 0; padding: 0;box-sizing: border-box;
+
+{
+  margin: 0; padding: 0;
+  box-sizing: border-box;
   font-family: 'Josefin Sans', sans-serif;
 }
     header{
